更新译者联系方式

--- a/ethereum_yellow_paper_cn.tex
+++ b/ethereum_yellow_paper_cn.tex
@@ -44,7 +44,7 @@
 \title{以太坊：一种安全去中心化的通用交易账本 \\ {\smaller \textbf{EIP-150版本  (\YellowPaperVersionNumber{})}}}
 \author{
     原文作者: Dr. Gavin Wood,  gavin@ethcore.io\\
-    译者: 崔广斌, guangbincui@gmail.com; 高天露, tianlu.jorden.gao@gmail.com
+    译者: 崔广斌(微信号: yuange1024); 高天露(tianlu.jorden.gao@gmail.com)
 }
 \begin{document}
 
