修改个别错别字

--- a/ethereum_yellow_paper_cn.tex
+++ b/ethereum_yellow_paper_cn.tex
@@ -1145,7 +1145,7 @@ Ethash 是以太坊 1.0 的 PoW 算法。它是 Dagger-Hashimoto 的最后版本
 
 通过扫描区块头得到一个种子。根据种子可以计算一个初始大小为 $J_{cacheinit}$ 字节位随机数缓存。轻节点客户端可以保存这个缓存。根据缓存，我们能生成一个初始化为 $J_{datasetinit}$ 字节的数据集合，数据集合中每个元素依赖于缓存中的一小部分数据。全节点客户和矿工保存着数据集合。数据集合随时间线性增长。
 
-挖矿涉及到组合数据集合的随机碎片并将他们哈希在一起。使用少量内存就可以验证, 可以借助缓存重新产生需要的数据片段, 所以仅需要保存缓存即可。大的数据集合每$J_{epoch}$ (译者注: 30000) 个区块更新一次，所以大多数矿工的工作都是读取这些数据集合，而不是尝试改变它。附录 \ref{app:ethash} 想 Ethash 的详细解释。
+挖矿涉及到组合数据集合的随机碎片并将他们哈希在一起。使用少量内存就可以验证, 可以借助缓存重新产生需要的数据片段, 所以仅需要保存缓存即可。大的数据集合每$J_{epoch}$ (译者注: 30000) 个区块更新一次，所以大多数矿工的工作都是读取这些数据集合，而不是尝试改变它。附录 \ref{app:ethash} 有 Ethash 的详细解释。
 
 \section{执行合约}
 有一些特别有用的合约模式；我们会讨论其中两个,分别是数据订阅和随机数。
@@ -1163,7 +1163,7 @@ Ethash 是以太坊 1.0 的 PoW 算法。它是 Dagger-Hashimoto 的最后版本
 
 区块链合并可以用来减少作为全节点或挖矿节点客户端需要下载的区块数量。及时将给定节点（也许每10000个区块）对应的的字典树压缩, 并在点对点网络中维护，且有效地重塑创世块。下载单个归档时,可以减少下载的区块数量。
 
-最后，或许会引导压缩区块链：可以抛弃在一定量的区块总没有发送或接受交易的字典树状态节点,以便减少状态数据库的增长。
+最后，或许会引导压缩区块链：可以抛弃在一定量的区块没有发送或接受交易的字典树状态节点,以便减少状态数据库的增长。
 
 \subsection{可扩展性}
 可扩展性仍然是一个永恒的顾虑。因为一个一般化的状态交易函数，使得切分及并行化交易难以使用分而治之的策略。仍未解决的是，系统的平均交易值在增加, 但系统的能力范围却是固定的,其中低价值的交易保存在主账本中已无经济意义,因而会被忽略。尽管如此，一些策略存有可能发展为可扩展性的协议来解决此问题。
@@ -1182,7 +1182,7 @@ Ethash 是以太坊 1.0 的 PoW 算法。它是 Dagger-Hashimoto 的最后版本
 \section{可用性}
 本文的英文源文件维护在 \url{https://github.com/ethereum/yellowpaper}。 一个自动生成的英文 PDF 格式文件见 \url{https://ethereum.github.io/yellowpaper/paper.pdf}。
 
-本文的中文源文件维护在 \url{https://github.com/yuange1024/ethereum_yellowpaper}。一个自动生成的中文 PDF 格式文件见 \url{https://github.com/yuange1024/ethereum_yellowpaper/blob/master/Paper_Chinese.pdf}。 (本段由译者增加)
+本文的中文源文件维护在 \url{https://github.com/yuange1024/ethereum_yellowpaper}。一个自动生成的中文 PDF 格式文件见 \url{https://github.com/yuange1024/ethereum_yellowpaper/blob/master/ethereum_yellow_paper_cn.pdf}。 (本段由译者增加)
 
 \bibliography{Biblio}
 \bibliographystyle{plainnat}
