--- a/ethereum_yellow_paper_cn.tex
+++ b/ethereum_yellow_paper_cn.tex
@@ -41,10 +41,11 @@
 \newcommand*\ie{i.e.\@\xspace}
 %\renewcommand{\itemhook}{\setlength{\topsep}{0pt}  \setlength{\itemsep}{0pt}\setlength{\leftmargin}{15pt}}
 
-\title{以太坊：一种安全去中心化的通用交易账本 \\ {\smaller \textbf{EIP-150版本  (\YellowPaperVersionNumber{})}}}
+\title{以太坊：一种安全去中心化的通用交易账本 \\ {\smaller \textbf{EIP-150版本 (\YellowPaperVersionNumber{})}}}
 \author{
-    原文作者: Dr. Gavin Wood,  gavin@ethcore.io\\
-    译者: 崔广斌(微信号: yuange1024); 高天露(tianlu.jorden.gao@gmail.com)
+    原文作者：Dr. Gavin Wood, gavin@ethcore.io\\
+    译者：崔广斌（微信号：yuange1024）；高天露（tianlu.jorden.gao@gmail.com）
+    修订、勘误：杨镇（rivers.yang@icloud.com）
 }
 \begin{document}
 
@@ -52,9 +53,9 @@
 %\pagecolor{lightpink}
 
 \begin{abstract}
-区块链对交易数据加密以保证安全,已经通过一系列项目展示了它的实用性,尤其是比特币。每一个这个的项目都可以看作是一个基于去中心化的单实例且拥有计算资源的应用。我们称这种模式为可以共享状态的单例状态机。
+由密码学安全交易（cryptographically-secured transactions）所构成的区块链范例，已经通过一系列项目展示了它的实用性，不止是比特币。每一个这类项目都可以看作是一个基于去中心化的单实例计算资源所构建的简单应用程序。我们可以把这种范例称为具有共享状态（shared-state）的交易化单例状态机（transactional singleton machine）。
 
-以太坊以更广义的方式实现了这种模式。 它提供了大量的资源,每一个资源都拥有独立的状态和操作码,并且可以通过消息传递方式和其它资源交互。我们讨论了它的设计、实现难题、它提供的机会以及以后可能有的一些问题。
+以太坊以更通用的方式实现了这种范例。它提供了大量的资源，每一个资源都拥有独立的状态和操作码，并且可以通过消息传递方式和其它资源交互。我们将讨论它的设计、实现上的问题、它所提供的机遇以及我们所设想的未来障碍。
 \end{abstract}
 
 \maketitle
@@ -64,53 +65,49 @@
 
 \section{简介}\label{sec:introduction}
 
+随着互联网连接了世界上绝大多数地方，全球信息共享的成本越来越低。比特币网络通过共识机制、自愿遵守的社会合约，实现了一个去中心化的价值转移系统且可以在全球范围内自由使用，这样的技术改革展示了它的巨大力量。这样的系统可以说是加密安全、基于交易的状态机的一种具体应用。尽管还很简陋，但类似域名币（Namecoin）这样的后续系统，把这种技术从最初的“货币应用”发展到了其它领域。
 
-随着互联网连接了世界上绝大多数地方，全球信息共享的成本越来越低。比特币网络通过共识机制、自愿遵守的社会合约,实现一个去中心化的价值转移系统且可以在全球范围内自由使用, 这样的技术改革展示了它的巨大力量。这样的系统可以说是加密安全、基于交易的状态机的一种具体应用。后续类似这样的系统,如域名币（Namecoin）, 从最原先的货币应用发展到了其它应用,虽然它只是其中很简单的一种应用。
-
-以太坊是一个尝试达到通用性的技术项目,可以构建任何基于交易的状态机。而且以太坊致力于为开发者提供一个紧凑的、整合的端到端系统, 这个系统提供了一种可信的消息传递计算框架让开发者以一种前所未有的范式来构建软件。
+以太坊是一个尝试达到通用性的技术项目，可以构建任何基于交易的状态机。而且以太坊致力于为开发者提供一个紧密整合的端到端系统，这个系统提供了一种可信对象消息传递计算框架（a trustful object messaging compute framework），使开发者可以用一种前所未有的计算范式来构建软件。
 
 \subsection{驱动因素} \label{ch:driving}
 
-这个项目有很多目标，其中最重要的目标是为了促成不信任对方的个体之间的交易。这些不信任可能是因为地理位置分离、接口对接难度,或者是不兼容、不称职、不情愿、支出、不确定、不方便,或现有法律系统的腐败。于是我们想用一个丰富且清晰的语言去实现一个状态变化的系统，期望协议可以自动被执行, 我们可以为此提供一种实现方式。
+这个项目有很多目标，其中最重要的目标是为了促成那些本来无法信任对方的个体之间的交易。这种不信任可能是因为地理上的分隔、对接的困难，或者是不兼容、不称职、不情愿、费用、不确定、不方便，或现有法律系统的腐败。于是我们想用一个丰富且清晰的语言去实现一个状态变化的系统，期望协议可以自动被执行，我们可以为此提供一种实现方式。
 
+这里所提议的系统中的交易，有一些在现实世界中并不常见的属性。公允的裁判通常很难找到，但无私的算法解释器却可以天然地提供这种特性。自然语言必然是模糊的，会导致信息的缺失，同时那些平白的、旧有的成见很难被动摇，所以透明性，或者说通过交易日志和规则或代码指令来清晰地查看状态变化或者裁判结果的能力，在基于人来构建的系统中从来无法完美实现。
 
-这个提议系统中的交易, 有一些在现实世界中并不常见的属性。审判廉洁，在现实世界往往很难找到，但对公正的算法解释器是天然的; 透明，或者说通过交易日志和规则或代码指令能够清晰的看到状态变化或者判决, 但是因为人类语言的模糊性、信息的缺乏以及老的偏见难以撼动,导致基于人的系统中从来没有完美实现透明。
-
-总的来说，我们希望能提供一个系统，能够保证用户无论是和其他个体、系统还是组织交互,都能对可能的结果及产生结果的过程完全信任。
-
+总的来说，我希望能提供一个系统，来给用户提供一些保证：无论是与其他个体、系统还是组织进行交互，他们都能完全信任可能的结果以及产生结果的过程。
 
 \subsection{前人工作} \label{ch:previous}
 
- \cite{buterin2013ethereum} 在2013年9月下旬第一次提出了这种系统的核心机制。虽然现在发展出了多种方案, 但最关键的部分, 具备图灵完备语言且不受限制的内部交易存贮容量的区块链, 仍未变化。
+\cite{buterin2013ethereum} 在2013年9月下旬第一次提出了这种系统的核心机制。虽然现在发展出了多种方案，但最关键的部分，具备图灵完备语言且不受限制的内部交易存贮容量的区块链，仍未变化。
 
-\cite{dwork92pricingvia} 提出了一种使用计算支出的密码学证明方式(proof-of-work, 工作量证明)在互联网上传递信号值。信号值用作阻挡垃圾邮件，而不是任何一种货币, 但展示了一个基本的数据通道可以承载强大经济信号的可能性,  允许接受者无需依赖信任而做出物理断言。\cite{back2002hashcash} 后来设计了一个类似的系统。
+\cite{dwork92pricingvia} 提出了一种使用计算支出的密码学证明方式(proof-of-work，工作量证明)在互联网上传递信号值。信号值用作阻挡垃圾邮件，而不是任何一种货币，但展示了一个基本的数据通道可以承载强大经济信号的可能性， 允许接受者无需依赖信任而做出物理断言。\cite{back2002hashcash} 后来设计了一个类似的系统。
 
-\cite{vishnumurthy03karma:a}最早使用工作量证明作为强大的经济信号保证货币安全。 在这个案例中，代币用作检查点对点（peer-to-peer,p2p）文件交易，同时保证“消费者”能支付给为他们提供服务的“供应商”。这种通过工作量证明的安全模型逐步扩展, 包括使用电子签名和账本技术, 以保证历史记录不被篡改, 怀有恶意的用户不能进行欺诈支付或不公平的抱怨。五年后（2008年），中本聪\cite{nakamoto2008bitcoin} 介绍了另一种更广泛的工作量证明安全价值代币。这个项目的成果就是比特币,比特币成为了第一个被全球广泛认可的去中心化交易账本。
+\cite{vishnumurthy03karma:a} 最早使用工作量证明作为强大的经济信号保证货币安全。在这个案例中，代币用作检查点对点（peer-to-peer,p2p）文件交易，同时保证“消费者”能支付给为他们提供服务的“供应商”。这种通过工作量证明的安全模型逐步扩展，包括使用电子签名和账本技术，以保证历史记录不被篡改，怀有恶意的用户不能进行欺诈支付或不公平的抱怨。五年后（2008年），中本聪\cite{nakamoto2008bitcoin} 介绍了另一种更广泛的工作量证明安全价值代币。这个项目的成果就是比特币,比特币成为了第一个被全球广泛认可的去中心化交易账本。
 
+由于比特币的成功，竞争币(alt-coins)开始兴起,通过修改比特币的协议创建了大量的其它数字货币。比较知名的有莱特币（Litecoin）和素数币（Primecoin），参见 \cite{sprankel2013technical} 。一些项目使用比特币的核心机制并重新改造以应用在其它领域,例如域名币（Namecoin）致力于提供一个去中心化的名字解析系统，参见 \cite{aron2012bitcoin} 。
 
-由于比特币的成功，竞争币(alt-coins)开始兴起,通过修改比特币的协议创建了大量的其它数字货币。比较知名的有莱特币（Litecoin）和素数币（Primecoin）, 参见 \cite{sprankel2013technical} 。一些项目使用比特币的核心机制并重新改造以应用在其它领域,例如域名币（Namecoin）致力于提供一个去中心化的名字解析系统, 参见 \cite{aron2012bitcoin} 。
+其它在比特币网络之上构建的项目，也是依赖巨大的系统价值和巨大的算力来保证共识机制。万事达币（Mastercoin）项目是在比特币协议之上,通过一系列基于核心协议的的辅助插件，构建一个包含许多高级功能的富协议，参见 \cite{mastercoin2013willett}。彩色币（Coloured Coins，参见 \cite{colouredcoins2012rosenfeld}，采用了类似的但更简化的协议，以实现比特币基础货币的可替代性，并允许通过色度钱包（chroma-wallet）来创建和跟踪代币。
 
-其它在比特币网络之上构建的项目, 也是依赖巨大的系统价值和巨大的算力来保证共识机制。万事达币（Mastercoin）项目是在比特币协议之上,通过一系列基于核心协议的的辅助插件, 构建一个包含许多高级功能的富协议, 参见 \cite{mastercoin2013willett}。彩色币（Coloured Coins, 参见 \cite{colouredcoins2012rosenfeld}, 采用了类似的但更简化的协议, 以实现比特币基础货币的可替代性, 并允许通过色度钱包（chroma-wallet）来创建和跟踪代币。
+其它一些工作通过放弃中心化来进行。瑞波币（Ripple）,参见 \cite{boutellier2014pirates}，试图去创建一个货币兑换的联邦系统（“federated” system）和一个新的金融清算系统。这个系统展示了放弃去中心化特性可以获得性能上的提升。
 
-其它一些工作通过放弃中心化来进行。瑞波币（Ripple）,参见 \cite{boutellier2014pirates}, 试图去创建一个货币兑换的联邦系统（“federated” system）和一个新的金融清算系统。这个系统展示了放弃去中心化特性可以获得性能上的提升。
-
-\cite{szabo1997formalizing} 和 \cite{miller1997future} 进行了智能合约（smart contract）的早期工作。大约在上世纪90年代，人们逐渐认识到协议算法的执行可以成为人类合作的重要力量。虽然当时没有这样的系统, 但可以预见未来的法律将会受到这种系统的影响。基于此, 以太坊或许可以成为这种密码学-法律系统的通用实现。
+\cite{szabo1997formalizing} 和 \cite{miller1997future} 进行了智能合约（smart contract）的早期工作。大约在上世纪90年代，人们逐渐认识到协议算法的执行可以成为人类合作的重要力量。虽然当时没有这样的系统，但可以预见未来的法律将会受到这种系统的影响。基于此，以太坊或许可以成为这种密码学-法律系统的通用实现。
 
 %E language?
 
 \section{区块链} \label{ch:overview}
 
-以太坊在整体上可以看作一个基于交易的状态机：起始于一个创世块（Genesis）状态，然后随着交易的执行状态逐步改变一直到最终状态, 这个最终状态是以太坊世界的权威版本。状态中包含的信息有:账户余额、名誉度、信誉度、现实世界的附属数据等; 简而言之，能包含电脑可以描绘的任何信息。因此，交易是连接两个状态的有效桥梁；“有效”非常重要---因为无效的状态改变远超过有效的状态改变。例如：无效的状态改变可能是减少账号余额，但是没有在其它账户上加上同等的额度。一个有效的状态转换是通过交易进行的,表达式如下:
+以太坊在整体上可以看作一个基于交易的状态机：起始于一个创世块（Genesis）状态，然后随着交易的执行状态逐步改变一直到最终状态，这个最终状态是以太坊世界的权威版本。状态中包含的信息有:账户余额、名誉度、信誉度、现实世界的附属数据等; 简而言之，能包含电脑可以描绘的任何信息。因此，交易是连接两个状态的有效桥梁；“有效”非常重要---因为无效的状态改变远超过有效的状态改变。例如：无效的状态改变可能是减少账号余额，但是没有在其它账户上加上同等的额度。一个有效的状态转换是通过交易进行的,表达式如下:
 \begin{equation}
 \boldsymbol{\sigma}_{t+1} \equiv \Upsilon(\boldsymbol{\sigma}_t, T)
 \end{equation}
 
 
-$\Upsilon$ 是以太坊状态转换函数。在以太坊中, $\Upsilon$ 和 $\boldsymbol{\sigma}$ 比已有的任何比较系统都强; $\Upsilon$ 可以执行任意计算, 而 $\boldsymbol{\sigma}$  可以存贮交易中的任意状态。
+$\Upsilon$ 是以太坊状态转换函数。在以太坊中，$\Upsilon$ 和 $\boldsymbol{\sigma}$ 比已有的任何比较系统都强; $\Upsilon$ 可以执行任意计算，而 $\boldsymbol{\sigma}$  可以存贮交易中的任意状态。
 
-区块中记录着交易信息；区块之间通过密码学哈希(hash)链接起来。区块链就像一个分类账,将一系列交易记录在一起,并且连接上一个区块及最终状态(并没有直接保存最终状态本身---否则整个区块链就太大了）。系统激励节点去挖矿, 挖矿获得激励后,会执行状态转移函数,增加挖矿者的账户余额。
+区块中记录着交易信息；区块之间通过密码学哈希(hash)链接起来。区块链就像一个分类账,将一系列交易记录在一起,并且连接上一个区块及最终状态(并没有直接保存最终状态本身---否则整个区块链就太大了）。系统激励节点去挖矿，挖矿获得激励后,会执行状态转移函数,增加挖矿者的账户余额。
 
-挖矿是和其它潜在区块竞争一系列交易(一个区块)的记账权。它是通过密码安全证明的方式来实现。这个机制称为工作量证明, 会在  \ref{ch:pow} 详细讨论。
+挖矿是和其它潜在区块竞争一系列交易(一个区块)的记账权。它是通过密码安全证明的方式来实现。这个机制称为工作量证明，会在  \ref{ch:pow} 详细讨论。
 
 公式如下:
 \begin{eqnarray}
@@ -147,14 +144,14 @@ $10^{18}$ & Ether(以太) \\
 
 \subsection{历史?}
 
-因为这是一个去中心化的系统, 所有人都有机会在之前的某一个区块创建新的区块并连接在其后, 这会行成一个树状的区块。为了能在这个树状结构上从根节点（创世块）到叶子节点（包含最新交易的区块）能形成一个一致的区块链,必须有一个共识方案。如果有人认为从根节点到叶子节点的路径不是最佳的区块链, 那这时候就会发生分叉。
+因为这是一个去中心化的系统，所有人都有机会在之前的某一个区块创建新的区块并连接在其后，这会行成一个树状的区块。为了能在这个树状结构上从根节点（创世块）到叶子节点（包含最新交易的区块）能形成一个一致的区块链,必须有一个共识方案。如果有人认为从根节点到叶子节点的路径不是最佳的区块链，那这时候就会发生分叉。
 
-这就意味着在一个给定的时间点, 系统中会有多个状态共存：一些节点相信一个区块是包含权威的交易，其它节点则相信另外一些区块包含权的交易，其中就包含彻底不同或者不兼容的交易。这一点必须要避免, 因为它会破坏整个系统信用。
+这就意味着在一个给定的时间点，系统中会有多个状态共存：一些节点相信一个区块是包含权威的交易，其它节点则相信另外一些区块包含权的交易，其中就包含彻底不同或者不兼容的交易。这一点必须要避免，因为它会破坏整个系统信用。
 
 
-我们使用了一个简易 GHOST 协议版本来达成共识, 参见 \cite{cryptoeprint:2013:881} 。我们会在小结 \ref{ch:ghost} 详细说明。
+我们使用了一个简易 GHOST 协议版本来达成共识，参见 \cite{cryptoeprint:2013:881} 。我们会在小结 \ref{ch:ghost} 详细说明。
 
-有时会从一个特定的区块链高度启用新的协议。本文描述了协议的一个版本, 如果要跟踪历史区块链路径, 可能需要查看这份文档的历史版本。(译者注: 可以到 https://github.com/ethereum/yellowpaper 查看英文版历史版本)
+有时会从一个特定的区块链高度启用新的协议。本文描述了协议的一个版本，如果要跟踪历史区块链路径，可能需要查看这份文档的历史版本。(译者注: 可以到 https://github.com/ethereum/yellowpaper 查看英文版历史版本)
 
 \section{约定}\label{ch:conventions}
 
@@ -162,9 +159,9 @@ $10^{18}$ & Ether(以太) \\
 
 有两个高度结构化的顶层状态值,使用粗体小写希腊字母: $\boldsymbol{\sigma}$  表示世界状态(world-state);  $\boldsymbol{\mu}$ 表示机器状态（machine-state）。
 
-作用在高度结构化数据上的函数，使用大写的希腊字母，例如： $\Upsilon$ , 是以太坊中的状态转换函数。
+作用在高度结构化数据上的函数，使用大写的希腊字母，例如： $\Upsilon$ ，是以太坊中的状态转换函数。
 
-对于大部分函数来说，通常用一个大写的字母表示，例如：$C$, 表示费用函数。可能会使用下角标表示一些特别的变量，例如：$C_\text{\tiny SSTORE}$，表示执行 {\tiny SSTORE} 操作的费用函数。对于一些可能是外部定义的函数，可能会使用打印机文字字体，例如：$\texttt{KEC512}$ 哈希函数,使用 $\texttt{KEC}$ 表示。$\texttt{KEC512}$  表示 Keccack-512 哈希函数。
+对于大部分函数来说，通常用一个大写的字母表示，例如：$C$，表示费用函数。可能会使用下角标表示一些特别的变量，例如：$C_\text{\tiny SSTORE}$，表示执行 {\tiny SSTORE} 操作的费用函数。对于一些可能是外部定义的函数，可能会使用打印机文字字体，例如：$\texttt{KEC512}$ 哈希函数,使用 $\texttt{KEC}$ 表示。$\texttt{KEC512}$  表示 Keccack-512 哈希函数。
 
 元组通常使用一个大写字母，例如：$T$，表示一个以太坊交易。使用下标可能会表示一个独立的变量,例如： $T_n$ ，表示交易中随机数。角标形式用于表示它们的类型；例如：大写的下角标表示元组包含的下角标变量。
 
@@ -172,15 +169,15 @@ $10^{18}$ & Ether(以太) \\
 
 任意长度的序列通常用加粗的小写字母表示，例如 $\mathbf{o}$ 表示消息调用中输出的数据字节序列。有时候，会对特别重要的值使用粗体。
 
-我们认为标量都是正整数且属于集合 $\mathbb{P}$。所有的字节序列属于集合 $\mathbb{B}$，附录 \ref{app:rlp} 给出了正式的定义。用下角标表示这样的序列集合限制在一定长度以内, 长度为 32 的字节序列使用 $\mathbb{B}_{32}$ 表示, 所有比 $2^{256}$ 小的正整数使用 $\mathbb{P}_{256}$ 表示。详细定义见 \ref{ch:block}。
+我们认为标量都是正整数且属于集合 $\mathbb{P}$。所有的字节序列属于集合 $\mathbb{B}$，附录 \ref{app:rlp} 给出了正式的定义。用下角标表示这样的序列集合限制在一定长度以内，长度为 32 的字节序列使用 $\mathbb{B}_{32}$ 表示，所有比 $2^{256}$ 小的正整数使用 $\mathbb{P}_{256}$ 表示。详细定义见 \ref{ch:block}。
 
 使用方括号表示序列中的一个元素或子序列,例如： $\boldsymbol{\mu}_\mathbf{s}[0]$ 表示栈中的第一个条目。对于子序列来说，使用省略号表示一定的范围，且含首尾限制，例如：$\boldsymbol{\mu}_\mathbf{m}[0..31]$ 表示计算机内存中的前32个条目。
 
 在全局状态的情况下，σ 是一个含多个账号的序列，本身的数组，方形括号被用作去表示一个单独的账号。
 
-以全局状态 $\boldsymbol{\sigma}$ 为例, 它表示一系列的账户, 它们自身的元组, 方括号用于表示一个独立的账户。
+以全局状态 $\boldsymbol{\sigma}$ 为例，它表示一系列的账户，它们自身的元组，方括号用于表示一个独立的账户。
 
-当去考虑现有的变量时，我们遵循在给定的范围内去定义的原则，使用占位符 $\Box$ 表示未修改的输入变量, 使用 $\Box'$ 表示修改的和可用的变量, $\Box^*$,  $\Box^{**}$ \&c 表示中间变量。在特殊情况下，为了提高可读性和清晰性，我可能会使用字母-数字下角标表示中间值。
+当去考虑现有的变量时，我们遵循在给定的范围内去定义的原则，使用占位符 $\Box$ 表示未修改的输入变量，使用 $\Box'$ 表示修改的和可用的变量，$\Box^*$， $\Box^{**}$ \&c 表示中间变量。在特殊情况下，为了提高可读性和清晰性，我可能会使用字母-数字下角标表示中间值。
 
 当使用已有的函数时，给定一个函数 $f$,那么函数 $f^*$ 表示一个相似的、替换序列的函数映射。详细定义见 \ref{ch:block}。
 
@@ -204,9 +201,9 @@ $10^{18}$ & Ether(以太) \\
 账户状态包含以下四个字段：
 \begin{description}
 \item[nonce,随机数] 这个值等于账户发出的交易数及这个账户创建的合约数量之和。 $\boldsymbol{\sigma}[a]_n$ 表示状态 $\boldsymbol{\sigma}$ 中的地址 $a$ 的 nonce 值。
-\item[balance,余额] $\boldsymbol{\sigma}[a]_b$, 表示这个账户拥有多少 Wei。
-\item[storageRoot,存储根节点] 保存账户内容的 Merkle Patricia 树根节点的 256 位哈希编码到字典树中, 作为从 256 位整数键值哈希的Keccak 256 位哈希到 256 位整数的 RLP-编码映射。这个哈希定义为 $\boldsymbol{\sigma}[a]_s$。
-\item[codeHash,代码哈希] 这个账户的 EVM(Ethereum Virtual Machine,以太坊虚拟机)代码哈希值---代码执行时,这个地址会接收一个消息调用; 它和其它字段不同, 创建后不可更改。状态数据库中包含所有像这样的代码片段哈希, 以便后续使用。 这个哈希定义为 $\boldsymbol{\sigma}[a]_c$,$\mathbf{b}$ 表示代码,  $\texttt{\small KEC}(\mathbf{b}) = \boldsymbol{\sigma}[a]_c$.
+\item[balance,余额] $\boldsymbol{\sigma}[a]_b$，表示这个账户拥有多少 Wei。
+\item[storageRoot,存储根节点] 保存账户内容的 Merkle Patricia 树根节点的 256 位哈希编码到字典树中，作为从 256 位整数键值哈希的Keccak 256 位哈希到 256 位整数的 RLP-编码映射。这个哈希定义为 $\boldsymbol{\sigma}[a]_s$。
+\item[codeHash,代码哈希] 这个账户的 EVM(Ethereum Virtual Machine,以太坊虚拟机)代码哈希值---代码执行时,这个地址会接收一个消息调用; 它和其它字段不同，创建后不可更改。状态数据库中包含所有像这样的代码片段哈希，以便后续使用。 这个哈希定义为 $\boldsymbol{\sigma}[a]_c$,$\mathbf{b}$ 表示代码， $\texttt{\small KEC}(\mathbf{b}) = \boldsymbol{\sigma}[a]_c$.
 \end{description}
 
 
@@ -216,7 +213,7 @@ $10^{18}$ & Ether(以太) \\
 \texttt{\small TRIE}\big(L_I^*(\boldsymbol{\sigma}[a]_\mathbf{s})\big) \equiv \boldsymbol{\sigma}[a]_s
 \end{equation}
 
-字典树中的键值对集合函数, $L_I^*$, 定义为基于基础函数 $L_I$ 的元素转换:
+字典树中的键值对集合函数，$L_I^*$，定义为基于基础函数 $L_I$ 的元素转换:
 \begin{equation}
 L_I\big( (k, v) \big) \equiv \big(\texttt{\small KEC}(k), \texttt{\small RLP}(v)\big)
 \end{equation}
@@ -226,9 +223,9 @@ L_I\big( (k, v) \big) \equiv \big(\texttt{\small KEC}(k), \texttt{\small RLP}(v)
 k \in \mathbb{B}_{32} \quad \wedge \quad v \in \mathbb{P}
 \end{equation}
 
-需要说明的是,$\boldsymbol{\sigma}[a]_\mathbf{s}$ 不应算作这个账户的"物理"成员, 它不参与序列化。
+需要说明的是,$\boldsymbol{\sigma}[a]_\mathbf{s}$ 不应算作这个账户的"物理"成员，它不参与序列化。
 
-如果 \textbf{codeHash} 字段是一个空字符串的 Keccak-256 哈希, 例如 $\boldsymbol{\sigma}[a]_c = \texttt{\small KEC}\big(()\big)$, 则表示对应的节点表示一个简单账户, 有时简称非合约账户。
+如果 \textbf{codeHash} 字段是一个空字符串的 Keccak-256 哈希，例如 $\boldsymbol{\sigma}[a]_c = \texttt{\small KEC}\big(()\big)$，则表示对应的节点表示一个简单账户，有时简称非合约账户。
 
 
 因此我们可能定义一个世界状态函数 $L_S$：
@@ -258,28 +255,28 @@ $v$ 是账户合法性验证函数:
 
 \begin{description}
 \item[nonce,随机数] $T_n$,账户发出的交易数量。
-\item[gasPrice,燃料价格] $T_p$, 为执行交易所需要的计算资源付的 \textit{gas} 价格, 以 Wei 为单位。
-\item[gasLimit,燃料上限] $T_g$, 用于执行交易的最大 gas 数量。 这个值须在交易前设置,且设定后不能再修改。
-\item[to, 接收者地址] 消息调用接收者的 160 位地址。对与合约创建交易, 无需接收者地址, 使用 $\varnothing$ 表示, $\varnothing$ 是 $\mathbb{B}_0$ 的唯一成员。
-\item[value, 转账额度] $T_v$, 转到接收者账户的额度,以 Wei 为单位。对于合约创建,表示捐赠到合约地址的额度。
-\item[v, r, s] $T_w$, $T_r$ and $T_s$,和交易签名相关的变量, 用于确定交易的发送者。详见附录 \ref{app:signing}。
+\item[gasPrice,燃料价格] $T_p$，为执行交易所需要的计算资源付的 \textit{gas} 价格，以 Wei 为单位。
+\item[gasLimit,燃料上限] $T_g$，用于执行交易的最大 gas 数量。 这个值须在交易前设置,且设定后不能再修改。
+\item[to，接收者地址] 消息调用接收者的 160 位地址。对与合约创建交易，无需接收者地址，使用 $\varnothing$ 表示，$\varnothing$ 是 $\mathbb{B}_0$ 的唯一成员。
+\item[value，转账额度] $T_v$，转到接收者账户的额度,以 Wei 为单位。对于合约创建,表示捐赠到合约地址的额度。
+\item[v，r，s] $T_w$，$T_r$ and $T_s$,和交易签名相关的变量，用于确定交易的发送者。详见附录 \ref{app:signing}。
 \end{description}
 
-此外, 合约创建还包含以下字段:
+此外，合约创建还包含以下字段:
 
 \begin{description}
-\item[init,初始化] $T_\mathbf{i}$, 一个不限制大小的字节数组,表示账户初始化程序的EVM代码。
+\item[init,初始化] $T_\mathbf{i}$，一个不限制大小的字节数组,表示账户初始化程序的EVM代码。
 \end{description}
 
-\textbf{init} 是EVM代码片段; 执行 init后会返回另外一个代码片段, 每次合约接受消息调用(通过交易或内部调用)后都会执行这个代码片段。 仅当合约账户创建时会执行一次 \textbf{init}。
+\textbf{init} 是EVM代码片段; 执行 init后会返回另外一个代码片段，每次合约接受消息调用(通过交易或内部调用)后都会执行这个代码片段。 仅当合约账户创建时会执行一次 \textbf{init}。
 
-相比之下, 一个消息调用的交易包括:
+相比之下，一个消息调用的交易包括:
 
 \begin{description}
-\item[data,数据] $T_\mathbf{d}$, 一个不限制大小的字节数组, 表示消息调用的输入数据。
+\item[data,数据] $T_\mathbf{d}$，一个不限制大小的字节数组，表示消息调用的输入数据。
 \end{description}
 
-附录 \ref{app:signing} 详细描述了映射发送者交易的函数 $S$, 通过 SECP-256k1 的 ECDSA 曲线, 使用交易(除了最后的3个签名字段)作为数据来签名。目前我们先简单使用 $S(T)$ 表示发送者的指定交易 $T$ 。
+附录 \ref{app:signing} 详细描述了映射发送者交易的函数 $S$，通过 SECP-256k1 的 ECDSA 曲线，使用交易(除了最后的3个签名字段)作为数据来签名。目前我们先简单使用 $S(T)$ 表示发送者的指定交易 $T$ 。
 
 \begin{equation}
 L_T(T) \equiv \begin{cases}
@@ -288,7 +285,7 @@ L_T(T) \equiv \begin{cases}
 \end{cases}
 \end{equation}
 
-在这里,我们假设所有变量都是 RLP 编码的整数, 除了2个任意长度的字节数组 $T_\mathbf{i}$ 和 $T_\mathbf{d}$。
+在这里,我们假设所有变量都是 RLP 编码的整数，除了2个任意长度的字节数组 $T_\mathbf{i}$ 和 $T_\mathbf{d}$。
 
 \begin{equation}
 \begin{array}[t]{lclclc}
@@ -302,7 +299,7 @@ T_s \in \mathbb{P}_{256} & \wedge & T_\mathbf{d} \in \mathbb{B} & \wedge & T_\ma
 \mathbb{P}_n = \{ P: P \in \mathbb{P} \wedge P < 2^n \}
 \end{equation}
 
-地址哈希 $T_\mathbf{t}$ 稍微有些不同:它是一个 20 字节的地址哈希值, 但创建合约时它是RLP空字节系列, 使用 $\mathbb{B}_0$ 表示：
+地址哈希 $T_\mathbf{t}$ 稍微有些不同:它是一个 20 字节的地址哈希值，但创建合约时它是RLP空字节系列，使用 $\mathbb{B}_0$ 表示：
 \begin{equation}
 T_\mathbf{t} \in \begin{cases} \mathbb{B}_{20} & \text{if} \quad T_t \neq \varnothing \\
 \mathbb{B}_{0} & \text{otherwise}\end{cases}
@@ -310,25 +307,25 @@ T_\mathbf{t} \in \begin{cases} \mathbb{B}_{20} & \text{if} \quad T_t \neq \varno
 
 \subsection{区块} \label{ch:block}
 
-在以太坊中, 区块是相关信息的集合。与区块头 $H$ 想对应的交易信息为 $\mathbf{T}$, 其它区块头数据的集合 $\mathbf{U}$  表示它的父级区块中有和当前区块的爷爷辈区块是相同的。（这样的区块称为\textit{ommers}\footnote{\textit{ommer} 的意思和自然界中的父母的兄弟姐妹最相近, 详见 \url{http://nonbinary.org/wiki/Gender_neutral_language#Family_Terms}}, 译者注:不妨称之为叔链)。区块头包含的的信息如下：
+在以太坊中，区块是相关信息的集合。与区块头 $H$ 想对应的交易信息为 $\mathbf{T}$，其它区块头数据的集合 $\mathbf{U}$  表示它的父级区块中有和当前区块的爷爷辈区块是相同的。（这样的区块称为\textit{ommers}\footnote{\textit{ommer} 的意思和自然界中的父母的兄弟姐妹最相近，详见 \url{http://nonbinary.org/wiki/Gender_neutral_language#Family_Terms}}，译者注:不妨称之为叔链)。区块头包含的的信息如下：
 
 
 \begin{description}
-\item[parentHash, 父块哈希] $H_p$,父区块头的 Keccak 256位哈希。
-\item[ommersHash, 叔链哈希] $H_o$,当前区块的叔链列表 Keccak 256位哈希。
-\item[beneficiary, 受益者地址] $H_c$, 成功挖到这个区块的160位地址, 这个区块中的所有交易费用都会转到这个地址。
-\item[stateRoot,状态字典树根节点哈希] 状态字典树根节点的 Keccak 256位哈希, 交易打包到当前区块且区块定稿后可以生成这个值。
+\item[parentHash，父块哈希] $H_p$,父区块头的 Keccak 256位哈希。
+\item[ommersHash，叔链哈希] $H_o$,当前区块的叔链列表 Keccak 256位哈希。
+\item[beneficiary，受益者地址] $H_c$，成功挖到这个区块的160位地址，这个区块中的所有交易费用都会转到这个地址。
+\item[stateRoot,状态字典树根节点哈希] 状态字典树根节点的 Keccak 256位哈希，交易打包到当前区块且区块定稿后可以生成这个值。
 \item[transactionsRoot,交易字典树根节点哈希] 交易字典树根节点的 Keccak 256位哈希,在交易字典树含有区块中的所有交易列表。
 \item[receiptsRoot,接受者字典树根节点哈希] 接受者字典树根节点的 Keccak 256位哈希,在接受者字典树含有区块中的所有交易信息中的接受者。
-\item[logsBloom,日志Bloom] $H_b$, 日记Bloom过滤器由可索引信息（日志地址和日志主题）组成，这个信息包含在每个日志入口, 来自交易列表中的每个交易的接受者。
-\item[difficulty,难度] $H_d$,表示当前区块的难度水平, 这个值根据前一个区块的难度水平和时间戳计算得到。
+\item[logsBloom,日志Bloom] $H_b$，日记Bloom过滤器由可索引信息（日志地址和日志主题）组成，这个信息包含在每个日志入口，来自交易列表中的每个交易的接受者。
+\item[difficulty,难度] $H_d$,表示当前区块的难度水平，这个值根据前一个区块的难度水平和时间戳计算得到。
 \item[number,区块编号] $H_i$,等于当前区块的直系前辈区块数量。 创始区块的区块编号为 0。
 \item[gasLimit,燃料限制] $H_l$,目前每个区块的燃料消耗上限。
-\item[gasUsed, 燃料使用量] $H_g$,当前区块的所有交易使用燃料之和。
+\item[gasUsed，燃料使用量] $H_g$,当前区块的所有交易使用燃料之和。
 \item[timestamp,时间戳] $H_s$,当前区块初始化时的Unix时间戳。
-\item[extraData,附加数据] $H_x$, 32字节以内的字节数组。
-\item[mixHash,混合哈希] $H_m$,与一个与随机数(nonce)相关的256位哈希计算, 用于证明针对当前区块已经完成了足够的计算。
-\item[nonce,随机数] $H_n$, 一个 64 位哈希, 和计算混合哈希相关, 用于证明针对当前区块已经完成了足够的计算。
+\item[extraData,附加数据] $H_x$，32字节以内的字节数组。
+\item[mixHash,混合哈希] $H_m$,与一个与随机数(nonce)相关的256位哈希计算，用于证明针对当前区块已经完成了足够的计算。
+\item[nonce,随机数] $H_n$，一个 64 位哈希，和计算混合哈希相关，用于证明针对当前区块已经完成了足够的计算。
 \end{description}
 
 此外,当前区块还记录着这个区块的交易列表,以及2个叔链(ommer)的区块头列表。我们以 $B$ 表示一个区块:
@@ -338,9 +335,9 @@ B \equiv (B_H, B_\mathbf{T}, B_\mathbf{U})
 
 \subsubsection{交易收据}
 
-为了让交易信息编码能有利于零知识证明、索引、搜索, 我们将每个包含一定信息的交易收据进行编码。以 $B_\mathbf{R}[i]$ 表示第 $i$ 个交易,保存在一个索引字典树中,$H_e$ 是这个字典树的根节点。
+为了让交易信息编码能有利于零知识证明、索引、搜索，我们将每个包含一定信息的交易收据进行编码。以 $B_\mathbf{R}[i]$ 表示第 $i$ 个交易,保存在一个索引字典树中,$H_e$ 是这个字典树的根节点。
 
-交易收据是一个包含四个条目的元组：交易后的状态 $R_{\boldsymbol{\sigma}}$；当前区块中交易累计燃料使用量 $R_u$, 交易发生后会立即更新这个值;交易执行过程中创建的日志集合 $R_\mathbf{l}$；和日志 Bloom 过滤器 $R_b$ ：
+交易收据是一个包含四个条目的元组：交易后的状态 $R_{\boldsymbol{\sigma}}$；当前区块中交易累计燃料使用量 $R_u$，交易发生后会立即更新这个值;交易执行过程中创建的日志集合 $R_\mathbf{l}$；和日志 Bloom 过滤器 $R_b$ ：
 
 \begin{equation}
 R \equiv (R_{\boldsymbol{\sigma}}, R_u, R_b, R_\mathbf{l})
@@ -351,15 +348,15 @@ R \equiv (R_{\boldsymbol{\sigma}}, R_u, R_b, R_\mathbf{l})
 L_R(R) \equiv (\mathtt{\small TRIE}(L_S(R_{\boldsymbol{\sigma}})), R_u, R_b, R_\mathbf{l})
 \end{equation}
 
-交易后状态 $R_{\boldsymbol{\sigma}}$ 会编码到一个字典树中, 字典树的根节点组成了第一个条目。
+交易后状态 $R_{\boldsymbol{\sigma}}$ 会编码到一个字典树中，字典树的根节点组成了第一个条目。
 
-我们假定累计的燃料使用量 $R_u$ 是一个正整数, 日志Bloom $R_b$ 是2048位(256字节)的哈希:
+我们假定累计的燃料使用量 $R_u$ 是一个正整数，日志Bloom $R_b$ 是2048位(256字节)的哈希:
 \begin{equation}
 R_u \in \mathbb{P} \quad \wedge \quad R_b \in \mathbb{B}_{256}
 \end{equation}
 
 
-$R_\mathbf{l}$ 是一系列的日志入口, 例如 $(O_0, O_1, ...)$。 一个日志入口 $O$ 是一个日志记录器的地址 $O_a$ 的元组, $O_\mathbf{t}$ 是一系列32字节的日志主题, $O_\mathbf{d}$ 是一些字节数据:
+$R_\mathbf{l}$ 是一系列的日志入口，例如 $(O_0, O_1, ...)$。 一个日志入口 $O$ 是一个日志记录器的地址 $O_a$ 的元组，$O_\mathbf{t}$ 是一系列32字节的日志主题，$O_\mathbf{d}$ 是一些字节数据:
 \begin{equation}
 O \equiv (O_a, ({O_\mathbf{t}}_0, {O_\mathbf{t}}_1, ...), O_\mathbf{d})
 \end{equation}
@@ -381,11 +378,11 @@ M_{3:2048}(\mathbf{x}: \mathbf{x} \in \mathbb{B}) & \equiv & \mathbf{y}: \mathbf
 m(\mathbf{x}, i) &\equiv& \mathtt{\tiny KEC}(\mathbf{x})[i, i + 1] \bmod 2048
 \end{eqnarray}
 
-其中 $\mathcal{B}$ 是位引用函数, $\mathcal{B}_j(\mathbf{x})$ 等于字节数组 $\mathbf{x}$ 中的索引 j(从0开始索引) 的位。
+其中 $\mathcal{B}$ 是位引用函数，$\mathcal{B}_j(\mathbf{x})$ 等于字节数组 $\mathbf{x}$ 中的索引 j(从0开始索引) 的位。
 
 \subsubsection{整体有效性}
 
-如果一个区块同时满足以下几个条件，我们才能认为这个区块是有效的：当从起始状态 $\boldsymbol{\sigma}$ (父块的最终状态) 按顺序执行完生成新的状态 $H_r$ 后, 在内部要保持一致,包括叔链、交易区块哈希、给定的交易 $B_\mathbf{T}$（详细描述见 \ref{ch:finalisation}）:
+如果一个区块同时满足以下几个条件，我们才能认为这个区块是有效的：当从起始状态 $\boldsymbol{\sigma}$ (父块的最终状态) 按顺序执行完生成新的状态 $H_r$ 后，在内部要保持一致,包括叔链、交易区块哈希、给定的交易 $B_\mathbf{T}$（详细描述见 \ref{ch:finalisation}）:
 
 \begin{equation}
 \begin{array}[t]{lclc}
@@ -397,7 +394,7 @@ H_b &\equiv& \bigvee_{\mathbf{r} \in B_\mathbf{R}} \big( \mathbf{r}_b \big)
 \end{array}
 \end{equation}
 
-其中 $p(k, v)$ 是 RLP 的简单对转换, 在这个例子中, k 为这个区块中的交易索引,v 为交易收据:
+其中 $p(k, v)$ 是 RLP 的简单对转换，在这个例子中，k 为这个区块中的交易索引,v 为交易收据:
 \begin{equation}
 p(k, v) \equiv \big( \mathtt{\small RLP}(k), \mathtt{\small RLP}(v) \big)
 \end{equation}
@@ -407,7 +404,7 @@ p(k, v) \equiv \big( \mathtt{\small RLP}(k), \mathtt{\small RLP}(v) \big)
 \mathtt{\small TRIE}(L_S(\boldsymbol{\sigma})) = {P(B_H)_H}_r
 \end{equation}
 
-$\texttt{\small TRIE}(L_S(\boldsymbol{\sigma}))$ 是包含以RLP编码的状态 $\boldsymbol{\sigma}$ 键值对的 Merkle Patricia 树根节点哈希, $P(B_H)$ 是父节点。
+$\texttt{\small TRIE}(L_S(\boldsymbol{\sigma}))$ 是包含以RLP编码的状态 $\boldsymbol{\sigma}$ 键值对的 Merkle Patricia 树根节点哈希，$P(B_H)$ 是父节点。
 
 这些值根据交易计算产生，特别是交易收据 $B_\mathbf{R}$,这个通过交易状态累积函数 $\Pi$ 定义，在 \ref{sec:statenoncevalidation} 会详细说明。
 
@@ -501,9 +498,9 @@ n \leqslant \frac{2^{256}}{H_d} \quad \wedge \quad m = H_m
 \end{equation}
 with $(n, m) = \mathtt{PoW}(H_{\hcancel{n}}, H_n, \mathbf{d})$.
 
-其中 $H_{\hcancel{n}}$ 是新区块的区块头，但不包含随机数和混合哈希值，$\mathbf{d}$  是当前的数据集合 DAG(有向无环图)，需要去计算混合哈希,  $\mathtt{PoW}$ 是工作量证明函数（见 \ref{ch:pow}）：第一个元素用于计算混合哈希值，以证明使用了一个正确的 DAG, 第 2 个元素是伪随机数,依赖于 $H$ 及 $\mathbf{d}$ 。给定一个范围在$[0, 2^{64})$ 的均匀分布，则求解时间和难度 $H_d$ 成比例。
+其中 $H_{\hcancel{n}}$ 是新区块的区块头，但不包含随机数和混合哈希值，$\mathbf{d}$  是当前的数据集合 DAG(有向无环图)，需要去计算混合哈希， $\mathtt{PoW}$ 是工作量证明函数（见 \ref{ch:pow}）：第一个元素用于计算混合哈希值，以证明使用了一个正确的 DAG，第 2 个元素是伪随机数,依赖于 $H$ 及 $\mathbf{d}$ 。给定一个范围在$[0, 2^{64})$ 的均匀分布，则求解时间和难度 $H_d$ 成比例。
 
-这就是区块链安全基础，这也是一个恶意节点不能用其新创建的区块中重写历史数据的重要原因。因为这个随机数必须满足这些条件，且因为条件依赖于这个区块的内容和相关交易, 创建新的合法的区块是困难且耗时的, 需要超过所有诚实矿工的算力总和。
+这就是区块链安全基础，这也是一个恶意节点不能用其新创建的区块中重写历史数据的重要原因。因为这个随机数必须满足这些条件，且因为条件依赖于这个区块的内容和相关交易，创建新的合法的区块是困难且耗时的，需要超过所有诚实矿工的算力总和。
 
 因此,我们定义这个区块头的验证函数 $V(H)$ 为：
 
@@ -520,15 +517,15 @@ V(H) & \equiv &  n \leqslant \frac{2^{256}}{H_d} \wedge m = H_m \quad \wedge \\
 \end{eqnarray}
 其中 $(n, m) = \mathtt{PoW}(H_{\hcancel{n}}, H_n, \mathbf{d})$
 
-此外, \textbf{extraData} 最多 32 字节。
+此外，\textbf{extraData} 最多 32 字节。
 
 \section{燃料和支付} \label{ch:payment}
 
 为了避免网络滥用及回避由于图灵完整性而带来的一些不可避免的问题，在以太坊中所有的程序执行都需要费用。各种操作费用以 \textit{gas} (详见附录 \ref{app:fees} )为单位计算。任意的程序片段（包括合约创建、信息调回、利用及访问账户存储、在虚拟机上执行操作等）都可以根据规则计算出消耗的燃料数量。
 
-每一个交易都有燃料上限：\textbf{gasLimit} (燃料上限)。这些燃料从发送者的账户中扣除。具体从账户上扣除的额度和 \textbf{gasPrice}(燃料价格) 有关(译者注: 扣除额度 = \textbf{gasLimit} * \textbf{gasPrice}), 在执行交易前会指定燃料价格。如果这个账户不能支付起燃料费用，交易会被当作无效交易。之所以命名为燃料上限，是因为剩余的燃料在交易完成之后会被退回（以购买时的同样价格）到发送者账户。燃料不会被用在交易执行之外。因此对于可信任账户，应该设置一个相对较高的燃料上限。
+每一个交易都有燃料上限：\textbf{gasLimit} (燃料上限)。这些燃料从发送者的账户中扣除。具体从账户上扣除的额度和 \textbf{gasPrice}(燃料价格) 有关(译者注: 扣除额度 = \textbf{gasLimit} * \textbf{gasPrice})，在执行交易前会指定燃料价格。如果这个账户不能支付起燃料费用，交易会被当作无效交易。之所以命名为燃料上限，是因为剩余的燃料在交易完成之后会被退回（以购买时的同样价格）到发送者账户。燃料不会被用在交易执行之外。因此对于可信任账户，应该设置一个相对较高的燃料上限。
 
-通常来说，以太币（Ether）用作购买燃料, 未退回的部分转到了区块受益人的地址，通常这个账户的地址是由矿工设定。交易者可以任意设定燃料价格，然而矿工也可以任意地忽略某个交易。在一个交易中，高价格的燃料将消费这个发送者更多的以太币,并转给矿工更多的以太币，因此这个交易会被更多的矿工选择。通常来说，矿工会选择去通知这是他们执行交易最低燃料价格, 交易者们一般也会些选择一个高过燃料价格下限的价格。因此, 会有一个（加权的）最低燃料可接受价格分布，交易者们需要权衡降低燃料价格和交易快速被矿工打包。
+通常来说，以太币（Ether）用作购买燃料，未退回的部分转到了区块受益人的地址，通常这个账户的地址是由矿工设定。交易者可以任意设定燃料价格，然而矿工也可以任意地忽略某个交易。在一个交易中，高价格的燃料将消费这个发送者更多的以太币,并转给矿工更多的以太币，因此这个交易会被更多的矿工选择。通常来说，矿工会选择去通知这是他们执行交易最低燃料价格，交易者们一般也会些选择一个高过燃料价格下限的价格。因此，会有一个（加权的）最低燃料可接受价格分布，交易者们需要权衡降低燃料价格和交易快速被矿工打包。
 
 \section{交易执行} \label{ch:transactions}
 
@@ -541,23 +538,23 @@ V(H) & \equiv &  n \leqslant \frac{2^{256}}{H_d} \wedge m = H_m \quad \wedge \\
 \item 发送者账户的余额至少大于费用 $v_0$,需要提前支付。
 \end{enumerate}
 
-$T$ 表示交易, $\boldsymbol{\sigma}$ 表示状态, 状态转移函数 $\Upsilon$ 如下:
+$T$ 表示交易，$\boldsymbol{\sigma}$ 表示状态，状态转移函数 $\Upsilon$ 如下:
 \begin{equation}
 \boldsymbol{\sigma}' = \Upsilon(\boldsymbol{\sigma}, T)
 \end{equation}
 
-$\boldsymbol{\sigma}'$ 是交易后的状态。我们定义 $\Upsilon^g$ 为交易执行所消耗的燃料量, $\Upsilon^\mathbf{l}$ 为交易过程中产生的日志记录, 这些都会在后文正式定义。
+$\boldsymbol{\sigma}'$ 是交易后的状态。我们定义 $\Upsilon^g$ 为交易执行所消耗的燃料量，$\Upsilon^\mathbf{l}$ 为交易过程中产生的日志记录，这些都会在后文正式定义。
 
 \subsection{子状态}
 
-从交易执行过程来看，伴随交易会产生一些特定的信息, 我们称为交易子状态，用 $A$ 来表示:
+从交易执行过程来看，伴随交易会产生一些特定的信息，我们称为交易子状态，用 $A$ 来表示:
 \begin{equation}
 A \equiv (A_\mathbf{s}, A_\mathbf{l}, A_r)
 \end{equation}
 
-元组内容包含自毁集合 $A_\mathbf{s}$: 一个在交易完成后被删除的账户集合。 $A_\mathbf{l}$ 是一系列的日志：在代码执行过程中是可归档, 可索引的检查点, 允许以太坊世界的外部旁观者(例如去中心化应用的前端)跟踪合约调用。$A_r$ 表示返回的余额，当使用 {\small SSTORE} 指令将非0的合约存贮空间置为0时,返回余额会增加。虽然不是立即返回余额，但可以部分抵消整个执行费用。
+元组内容包含自毁集合 $A_\mathbf{s}$: 一个在交易完成后被删除的账户集合。 $A_\mathbf{l}$ 是一系列的日志：在代码执行过程中是可归档，可索引的检查点，允许以太坊世界的外部旁观者(例如去中心化应用的前端)跟踪合约调用。$A_r$ 表示返回的余额，当使用 {\small SSTORE} 指令将非0的合约存贮空间置为0时,返回余额会增加。虽然不是立即返回余额，但可以部分抵消整个执行费用。
 
-我们定义空的子状态 $A^0$, 它没有自毁、没有日志、返回余额为 0：
+我们定义空的子状态 $A^0$，它没有自毁、没有日志、返回余额为 0：
 \begin{equation}
 A^0 \equiv (\varnothing, (), 0)
 \end{equation}
@@ -571,7 +568,7 @@ g_0 \equiv {} & \sum_{i \in T_\mathbf{i}, T_\mathbf{d}} \begin{cases} G_{txdataz
 {} & + G_{transaction}
 \end{align}
 
-$T_\mathbf{i}$ 合约初始化EVM代码, $T_\mathbf{d}$ 是交易附带的关联数据, 取决于交易是合约创建还是消息调用。如果这个交易是合约创建,那么会增加 $G_\text{txcreate}$ , 其它情况则不增加。$G$ 的详细定义见附录 \ref{app:fees}。
+$T_\mathbf{i}$ 合约初始化EVM代码，$T_\mathbf{d}$ 是交易附带的关联数据，取决于交易是合约创建还是消息调用。如果这个交易是合约创建,那么会增加 $G_\text{txcreate}$ ，其它情况则不增加。$G$ 的详细定义见附录 \ref{app:fees}。
 
 预支付的费用 $v_0$ 计算如下:
 \begin{equation}
@@ -594,7 +591,7 @@ T_g & \leqslant & {B_H}_l - \ell(B_\mathbf{R})_u
 注意最后的条件: 交易燃料限制 $T_g$  <= 这个区块的燃料限制 ${B_H}_l$ - 这个区块之前的所有交易已使用的燃料 $\ell(B_\mathbf{R})_u$  。
 
 
-有效交易的执行起始于一个对状态不能撤回的改变：发送者账户 $S(T)$ 的随机数会加1, 账户余额扣减部分预付费用 $T_gT_p$。计算过程中有效的燃料 $g$ = $T_g - g_0$。无论是合约创建还是消息调用后的的最终状态（可能等于当前的状态），这个改变是确定的且从来没有无效的:从这个观点看不会存在无效的交易。
+有效交易的执行起始于一个对状态不能撤回的改变：发送者账户 $S(T)$ 的随机数会加1，账户余额扣减部分预付费用 $T_gT_p$。计算过程中有效的燃料 $g$ = $T_g - g_0$。无论是合约创建还是消息调用后的的最终状态（可能等于当前的状态），这个改变是确定的且从来没有无效的:从这个观点看不会存在无效的交易。
 
 我们定义检查点状态 $\boldsymbol{\sigma}_0$：
 \begin{eqnarray}
@@ -604,7 +601,7 @@ T_g & \leqslant & {B_H}_l - \ell(B_\mathbf{R})_u
 \end{eqnarray}
 
 
-从 $\boldsymbol{\sigma}_0$ 转变为 $\boldsymbol{\sigma}_P$ 和交易类型相关。不管它是创建合约还是消息调用,我们定义元组包括执行后的临时状态 $\boldsymbol{\sigma}_P$ , 剩余的燃料 $g'$ 和子状态 $A$ :
+从 $\boldsymbol{\sigma}_0$ 转变为 $\boldsymbol{\sigma}_P$ 和交易类型相关。不管它是创建合约还是消息调用,我们定义元组包括执行后的临时状态 $\boldsymbol{\sigma}_P$ ，剩余的燃料 $g'$ 和子状态 $A$ :
 \begin{equation}
 (\boldsymbol{\sigma}_P, g', A) \equiv \begin{cases}
 \Lambda(\boldsymbol{\sigma}_0, S(T), T_o, &\\ \quad\quad g, T_p, T_v, T_\mathbf{i}, 0) & \text{if} \quad T_t = \varnothing \\
@@ -617,19 +614,19 @@ T_g & \leqslant & {B_H}_l - \ell(B_\mathbf{R})_u
 g \equiv T_g - g_0
 \end{equation}
 
-$T_o$ 是原始执行者，与和合约创建或消息调用(直接由交易触发)不同, 可以通过 EVM 代码内部调用来执行。
+$T_o$ 是原始执行者，与和合约创建或消息调用(直接由交易触发)不同，可以通过 EVM 代码内部调用来执行。
 
-注意，我们使用 $\Theta_{3}$ 表示取函数值的前三个元素;最终结果是消息调用的输出（一个字节数组）, 最终结果并没有在交易的上下文使用。
+注意，我们使用 $\Theta_{3}$ 表示取函数值的前三个元素;最终结果是消息调用的输出（一个字节数组），最终结果并没有在交易的上下文使用。
 
-在消息调回或者创建合约被处理后，再确定退回的燃料后最终状态就确定了。 剩余的燃料 $g'$, 再加上一些补偿, 得到最终需要退回发送者的燃料 $g^*$:
+在消息调回或者创建合约被处理后，再确定退回的燃料后最终状态就确定了。 剩余的燃料 $g'$，再加上一些补偿，得到最终需要退回发送者的燃料 $g^*$:
 
 \begin{equation}
 g^* \equiv g' + \min \{ \Big\lfloor \dfrac{T_g - g'}{2} \Big\rfloor, A_r \}
 \end{equation}
 
-最终要退回发送者的燃料 $g^*$ 等于当前剩余的燃料 $g'$, 再加一个补偿, 这个补偿是 $A_r$ 和总使用燃料量 $T_g - g'$ 的一半中的小者。
+最终要退回发送者的燃料 $g^*$ 等于当前剩余的燃料 $g'$，再加一个补偿，这个补偿是 $A_r$ 和总使用燃料量 $T_g - g'$ 的一半中的小者。
 
-燃料对应的以太币给了矿工, 矿工地址是当前区块 $B$ 的受益者地址。我们定义预备最终状态 $\boldsymbol{\sigma}^*$ , 临时状态 $\boldsymbol{\sigma}_P$:
+燃料对应的以太币给了矿工，矿工地址是当前区块 $B$ 的受益者地址。我们定义预备最终状态 $\boldsymbol{\sigma}^*$ ，临时状态 $\boldsymbol{\sigma}_P$:
 
 \begin{eqnarray}
 \boldsymbol{\sigma}^* & \equiv & \boldsymbol{\sigma}_P \quad \text{except} \\
@@ -638,13 +635,13 @@ g^* \equiv g' + \min \{ \Big\lfloor \dfrac{T_g - g'}{2} \Big\rfloor, A_r \}
 m & \equiv & {B_H}_c
 \end{eqnarray}
 
-删除所有出现在自毁集合中的账户后, 达到了最终状态 $\boldsymbol{\sigma}'$:
+删除所有出现在自毁集合中的账户后，达到了最终状态 $\boldsymbol{\sigma}'$:
 \begin{eqnarray}
 \boldsymbol{\sigma}' & \equiv & \boldsymbol{\sigma}^* \quad \text{except} \\
 \forall i \in A_\mathbf{s}: \boldsymbol{\sigma}'[i] & \equiv & \varnothing
 \end{eqnarray}
 
-最后, 我们定义这次交易中总共使用的燃料 $\Upsilon^g$,  这次交易中创建的日志 $\Upsilon^\mathbf{l}$:
+最后，我们定义这次交易中总共使用的燃料 $\Upsilon^g$， 这次交易中创建的日志 $\Upsilon^\mathbf{l}$:
 \begin{eqnarray}
 \Upsilon^g(\boldsymbol{\sigma}, T) & \equiv & T_g - g' \\
 \Upsilon^\mathbf{l}(\boldsymbol{\sigma}, T) & \equiv & A_\mathbf{l}
@@ -656,7 +653,7 @@ m & \equiv & {B_H}_c
 
 当创建一个账户时会有很多参数:发送者（$s$）、原始执行者（$o$）、可用的燃料（$g$）、燃料价格（$p$）、转账额度（$v$）、任意长度的字节数组 $\mathbf{i}$、EVM初始化代码、消息调用/合约创建的当前栈深度($e$) 。
 
-我们定义创建函数为函数 $\Lambda$，相关的变量有状态 $\boldsymbol{\sigma}$ , 包含新状态、剩余燃料及交易子状态 $(\boldsymbol{\sigma}', g', A)$ (详见第6小结):
+我们定义创建函数为函数 $\Lambda$，相关的变量有状态 $\boldsymbol{\sigma}$ ，包含新状态、剩余燃料及交易子状态 $(\boldsymbol{\sigma}', g', A)$ (详见第6小结):
 \begin{equation}
 (\boldsymbol{\sigma}', g', A) \equiv \Lambda(\boldsymbol{\sigma}, s, o, g, p, v, \mathbf{i}, e)
 \end{equation}
@@ -668,7 +665,7 @@ a \equiv \mathcal{B}_{96..255}\Big(\mathtt{\tiny KEC}\Big(\mathtt{\tiny RLP}\big
 
 其中 $\mathtt{\tiny KEC}$ 是Keccak 256 位哈希函数，$\mathtt{\tiny RLP}$ 是 RLP 编码函数，$\mathcal{B}_{a..b}(X)$ 表示取二进制数据 $X$ 位数为范围 $[a, b]$ 的值,$\boldsymbol{\sigma}[x]$ 是地址 $x$ 的状态，$\varnothing$ 表示地址不存在时的状态。注意,我们使用的是一个比发送者随机数要小的值；我们断言会在在这个合约创建是前会增加发送者账户的随机数，因此在刚开始在交易或VM操作中使用的随机数就是发送者的随机数。
 
-账户的随机数开始被定义为0，余额为传递的转账值，存储空间为空, 哈希代码为Keccak 256位的空字符串哈希值；发送者的余额会减去转账值。这个变化的状态变成 $\boldsymbol{\sigma}^*$:
+账户的随机数开始被定义为0，余额为传递的转账值，存储空间为空，哈希代码为Keccak 256位的空字符串哈希值；发送者的余额会减去转账值。这个变化的状态变成 $\boldsymbol{\sigma}^*$:
 \begin{equation}
 \boldsymbol{\sigma}^* \equiv \boldsymbol{\sigma} \quad \text{except:}
 \end{equation}
@@ -685,12 +682,12 @@ v' \equiv \begin{cases}
 \end{cases}
 \end{equation}
 
-最后，这个账户是通过执行初始化账户的 EVM 代码 $\mathbf{i}$ （执行模型详见小结 \ref{ch:model} ）来初始化的。代码执行可以影响一些事件：可以改变当前账户的存储，能创建更多的账户,执行更多的消息调用。代码执行函数 $\Xi$ 可以得到一个元组,包括结果状态 $\boldsymbol{\sigma}^{**}$, 可用的剩余燃料 $g^{**}$, 子状态 $A$, 以及账户 $\mathbf{o}$ 的代码。    赋值到最后的状态的数组中，有效的剩余燃料，当前产生的子状态 $A$ 和账号代码本身 $\mathbf{o}$。
+最后，这个账户是通过执行初始化账户的 EVM 代码 $\mathbf{i}$ （执行模型详见小结 \ref{ch:model} ）来初始化的。代码执行可以影响一些事件：可以改变当前账户的存储，能创建更多的账户,执行更多的消息调用。代码执行函数 $\Xi$ 可以得到一个元组,包括结果状态 $\boldsymbol{\sigma}^{**}$，可用的剩余燃料 $g^{**}$，子状态 $A$，以及账户 $\mathbf{o}$ 的代码。    赋值到最后的状态的数组中，有效的剩余燃料，当前产生的子状态 $A$ 和账号代码本身 $\mathbf{o}$。
 
 \begin{equation}
 (\boldsymbol{\sigma}^{**}, g^{**}, A, \mathbf{o}) \equiv \Xi(\boldsymbol{\sigma}^*, g, I) \\
 \end{equation}
-其中 $I$ 包含执行环境的相关参数, 这些参数在小结 \ref{ch:model} 中有详细定义:
+其中 $I$ 包含执行环境的相关参数，这些参数在小结 \ref{ch:model} 中有详细定义:
 \begin{eqnarray}
 I_a & \equiv & a \\
 I_o & \equiv & o \\
@@ -702,10 +699,10 @@ I_\mathbf{b} & \equiv & \mathbf{i} \\
 I_e & \equiv & e
 \end{eqnarray}
 
-如果没有输入数据,使用 $I_\mathbf{d}$ 表示空的元组。$I_H$ 没有什么特别的, 它由区块链决定。
+如果没有输入数据,使用 $I_\mathbf{d}$ 表示空的元组。$I_H$ 没有什么特别的，它由区块链决定。
 
 
-代码执行会消耗燃料，且燃料不能低于 0，因此程序执行可能会在自然终止之前退出。在这个（以及其它几个）异常情况, 我们称发生了燃料不足（out-of-gas, OOG）异常：演进的状态变成空集合 $\varnothing$, 整个创建操作对状态没有影响,状态就像尝试创建合约之前一样。
+代码执行会消耗燃料，且燃料不能低于 0，因此程序执行可能会在自然终止之前退出。在这个（以及其它几个）异常情况，我们称发生了燃料不足（out-of-gas，OOG）异常：演进的状态变成空集合 $\varnothing$，整个创建操作对状态没有影响,状态就像尝试创建合约之前一样。
 
 如果这个初始化代码成功地执行完，那么对应的合约创建也会被支付。代码保存费用 $c$ 和创建的合约代码大小成正比:
 
@@ -713,12 +710,12 @@ I_e & \equiv & e
 c \equiv G_{codedeposit} \times |\mathbf{o}|
 \end{equation}
 
-如果没有足够的燃料支付这些, 例如 $g^{**} < c$, 就会抛出燃料不足异常。
+如果没有足够的燃料支付这些，例如 $g^{**} < c$，就会抛出燃料不足异常。
 
 
-发生这样的异常后, 剩余燃料将变为0。 如果合约创建是用于接受一个交易, 它不会影响合约创建内部消耗的燃料,无论如何都必须支付。然而，当燃料不足时, 并不会给这个合约地址转账。
+发生这样的异常后，剩余燃料将变为0。 如果合约创建是用于接受一个交易，它不会影响合约创建内部消耗的燃料,无论如何都必须支付。然而，当燃料不足时，并不会给这个合约地址转账。
 
-如果没有出现这样的异常,那么剩余的燃料会退会给最原始的发送者, 改变后的新状态也会永久保存。最终状态、燃料和子状态 $(\boldsymbol{\sigma}', g', A)$ 的关系如下:
+如果没有出现这样的异常,那么剩余的燃料会退会给最原始的发送者，改变后的新状态也会永久保存。最终状态、燃料和子状态 $(\boldsymbol{\sigma}', g', A)$ 的关系如下:
 \begin{align}
 \quad g' &\equiv \begin{cases}
 0 & \text{if} \quad F \\
@@ -735,15 +732,15 @@ F &\equiv \big(\boldsymbol{\sigma}^{**} = \varnothing \ \vee\  g^{**} < c \ \vee
 
 上述 $\boldsymbol{\sigma}'$ 的公式,表明了执行代码初始化得到的最终字节序列 $\mathbf{o}$,就是新创建账户的代码体。
 
-当合约成功创建时, 如果有转账,对应的转账也会转到合约中;如果没有转账, 则仅是合约创建。
+当合约成功创建时，如果有转账,对应的转账也会转到合约中;如果没有转账，则仅是合约创建。
 
 \subsection{细微之处}
-有一种情况需要注意, 当初始化代码正在执行时，新创建的地址出现了,但还没有内部的代码时。在这个时间内,任意消息调用不会引起代码执行。如果这个初始化执行结束于一个 {\small SELFDESTRUCT} 指令，这个账号会在交易执行完前将被删除, 这个行为是无意义的。对于 一个正常的 {\small STOP} 指令代码，或者返回的代码是空的, 这时候会出现一个僵尸账户，而且账户中剩余的余额将被永远被锁定在这个僵尸账户中。
+有一种情况需要注意，当初始化代码正在执行时，新创建的地址出现了,但还没有内部的代码时。在这个时间内,任意消息调用不会引起代码执行。如果这个初始化执行结束于一个 {\small SELFDESTRUCT} 指令，这个账号会在交易执行完前将被删除，这个行为是无意义的。对于 一个正常的 {\small STOP} 指令代码，或者返回的代码是空的，这时候会出现一个僵尸账户，而且账户中剩余的余额将被永远被锁定在这个僵尸账户中。
 
 \section{消息调用} \label{ch:call}
 当执行消息调用时需要多个参数：发送者（$s$）、交易发起人（$o$）、接受者（$r$）、执行代码的账户（$c$,通常就是接受者）、可用的燃料（$g$）、转账额度（$v$）、燃料价格（$p$）、函数调用的一个任意长度字节的数组 $\mathbf{d}$ 的输入数据以及消息调用/合约创建的当前栈($e$)深度。
 
-除了转变到新的状态和交易子状态外，消息调用还有一个额外的元素 --- 用字节数组 $\mathbf{o}$ 表示的输出数据。执行交易时输出数据是被忽略的,但在消息调用时, 输出的数据可以由虚拟机代码执行时进行初始化, 在这种情况下也使用了这些信息。
+除了转变到新的状态和交易子状态外，消息调用还有一个额外的元素 --- 用字节数组 $\mathbf{o}$ 表示的输出数据。执行交易时输出数据是被忽略的,但在消息调用时，输出的数据可以由虚拟机代码执行时进行初始化，在这种情况下也使用了这些信息。
 \begin{equation}
 (\boldsymbol{\sigma}', g', A, \mathbf{o}) \equiv \Theta(\boldsymbol{\sigma}, s, o, r, c, g, p, v, \tilde{v}, \mathbf{d}, e)
 \end{equation}
@@ -758,7 +755,7 @@ F &\equiv \big(\boldsymbol{\sigma}^{**} = \varnothing \ \vee\  g^{**} < c \ \vee
 \end{equation}
 unless $s = r$.
 
-我们假设如果 $\boldsymbol{\sigma}_1[r]$ 还未定义, 则会创建一个没有代码或没有状态且余额和随机数都为 0 的账户。我们改进上一个公式:
+我们假设如果 $\boldsymbol{\sigma}_1[r]$ 还未定义，则会创建一个没有代码或没有状态且余额和随机数都为 0 的账户。我们改进上一个公式:
 \begin{equation}
 \boldsymbol{\sigma}_1 \equiv \boldsymbol{\sigma}_1' \quad \text{except:} \\
 \end{equation}
@@ -776,7 +773,7 @@ unless $s = r$.
 \end{equation}
 
 
-账户关联的代码（整个代码碎片, Keccak 哈希为  $\boldsymbol{\sigma}[c]_c$）依靠执行模式（见小结 \ref{ch:model}）执行。合约创建时，如果执行因为一个异常（例如：耗尽了燃料、堆栈溢出、无效的跳转目的地或者无效的指令）而被终止，燃料不会返回给调用者，且状态也会立即恢复到转账之前的状态(例如 $\boldsymbol{\sigma}$)。
+账户关联的代码（整个代码碎片，Keccak 哈希为  $\boldsymbol{\sigma}[c]_c$）依靠执行模式（见小结 \ref{ch:model}）执行。合约创建时，如果执行因为一个异常（例如：耗尽了燃料、堆栈溢出、无效的跳转目的地或者无效的指令）而被终止，燃料不会返回给调用者，且状态也会立即恢复到转账之前的状态(例如 $\boldsymbol{\sigma}$)。
 
 \begin{eqnarray}
 \boldsymbol{\sigma}' & \equiv & \begin{cases}
@@ -803,7 +800,7 @@ I_e & \equiv & e \\
 \text{Let} \; \mathtt{\tiny KEC}(I_\mathbf{b}) & = & \boldsymbol{\sigma}[c]_c
 \end{eqnarray}
 
-我们假设客户端会先保存数据对 $(\mathtt{\tiny KEC}(I_\mathbf{b}), I_\mathbf{b})$ , 以便更方便地根据 $I_\mathbf{b}$ 做出决定。
+我们假设客户端会先保存数据对 $(\mathtt{\tiny KEC}(I_\mathbf{b})，I_\mathbf{b})$ ，以便更方便地根据 $I_\mathbf{b}$ 做出决定。
 
 如我们所见，消息调用执行框架 $\Xi$ 中有4个特例: 这四个是‘预编译’合约，作为最初架构中的一部分后续可能会变成本地扩展。这四个合约地址分别为1、2、3和4，分别是用来执行椭圆曲线公钥恢复函数、SHA2 256位哈希方案、RIPEMD 160位哈希方案和身份函数。
 
@@ -815,26 +812,26 @@ I_e & \equiv & e \\
 
 \subsection{基础}
 
-EVM 基于栈结构,机器的字大小（以及栈中数据的大小）是256位。主要是便于执行 Keccak-256 位哈希及椭圆曲线计算。内存模型基于字寻址的字节数据。栈的最大深度为1024。EVM也有一个独立的存储模型；类似内存但更像一个字节数组, 一个基于字寻址的字数组。不像易变的内存，存储是非易变的且是作为系统状态的一部分被维护。所有内存和存储中的数据会初始化为0。
+EVM 基于栈结构,机器的字大小（以及栈中数据的大小）是256位。主要是便于执行 Keccak-256 位哈希及椭圆曲线计算。内存模型基于字寻址的字节数据。栈的最大深度为1024。EVM也有一个独立的存储模型；类似内存但更像一个字节数组，一个基于字寻址的字数组。不像易变的内存，存储是非易变的且是作为系统状态的一部分被维护。所有内存和存储中的数据会初始化为0。
 
-EVM 不是标准的诺依曼结构。它通过一个特别的指令把程序代码保存在一个虚拟的可以交互的 ROM 中, 而不是保存在一般性可访问的内存或存储中。
+EVM 不是标准的诺依曼结构。它通过一个特别的指令把程序代码保存在一个虚拟的可以交互的 ROM 中，而不是保存在一般性可访问的内存或存储中。
 
-EVM 在某些情况下会有异常发生，包括堆栈溢出和非法指令。就像燃料缺乏异常那样, 不会改变状态。有异常时, EVM 立即停止并告知执行代理(交易的处理者，或执行环境), 代理会单独处理异常。
+EVM 在某些情况下会有异常发生，包括堆栈溢出和非法指令。就像燃料缺乏异常那样，不会改变状态。有异常时，EVM 立即停止并告知执行代理(交易的处理者，或执行环境)，代理会单独处理异常。
 
 \subsection{费用概述}
 
-在三个不同的情况下使用费用（命名为燃料），在这三种情况下，费用都是执行任何操作的必备条件。第一种情况也是最普通的情况就是计算操作费用（详见附录 \ref{app:fees}）。第二种情况，可能因为一个子消息调用或者合约创建而消耗燃料,这是执行 {\small CREATE}, {\small CALL} and {\small CALLCODE} 费用中的一部分。第三种情况，可能因为内存使用的增多而为燃料付费。
+在三个不同的情况下使用费用（命名为燃料），在这三种情况下，费用都是执行任何操作的必备条件。第一种情况也是最普通的情况就是计算操作费用（详见附录 \ref{app:fees}）。第二种情况，可能因为一个子消息调用或者合约创建而消耗燃料,这是执行 {\small CREATE}，{\small CALL} and {\small CALLCODE} 费用中的一部分。第三种情况，可能因为内存使用的增多而为燃料付费。
 
-对于一个账户的执行，内存总费用和需要的 32 字节最小倍数的内存量成正比, 所有的内存是按在一定范围中被包含的所有记忆索引（无论是读还是写）下要求的32位字节的最小倍数成比例的。这个为了 just-in-time (JIT) 的基础而去支付的；访问一个大于索引量 32 字节的地址,就会需要额外的内存使用费。地址很容易超过 32 字节的限制, 但 EVM 不同。综上所述，必须能够去管理这些可能发生的事件。
+对于一个账户的执行，内存总费用和需要的 32 字节最小倍数的内存量成正比，所有的内存是按在一定范围中被包含的所有记忆索引（无论是读还是写）下要求的32位字节的最小倍数成比例的。这个为了 just-in-time (JIT) 的基础而去支付的；访问一个大于索引量 32 字节的地址,就会需要额外的内存使用费。地址很容易超过 32 字节的限制，但 EVM 不同。综上所述，必须能够去管理这些可能发生的事件。
 
 
-存储费用有一个微妙的行为 —— 为最小化存储费用（直接与一个在所有结点上的大型状态数据通信），清除存储的执行费用指令不仅仅免除,而且会返回一些费用；因为初始化的存储费用往往比实际使用的多,在清除存储空间后会有返回费用, 这个返回的费用是预先支付的费用中的一部分。
+存储费用有一个微妙的行为 —— 为最小化存储费用（直接与一个在所有结点上的大型状态数据通信），清除存储的执行费用指令不仅仅免除,而且会返回一些费用；因为初始化的存储费用往往比实际使用的多,在清除存储空间后会有返回费用，这个返回的费用是预先支付的费用中的一部分。
 
 详细的 EVM 燃料消耗定义见附录 \ref{app:vm}。
 
 \subsection{执行环境}
 
-除了系统状态$\boldsymbol{\sigma}$ 和 计算过程中剩余的燃料 $g$ 外, 还有一些在计算过程中需要提供的信息, 这些信息组成了元组 $I$:
+除了系统状态$\boldsymbol{\sigma}$ 和 计算过程中剩余的燃料 $g$ 外，还有一些在计算过程中需要提供的信息，这些信息组成了元组 $I$:
 \begin{itemize}
 \item $I_a$, 拥有正在执行代码的账户地址。
 \item $I_o$, 发起这次交易的发送者地址。
